@@ -1,6 +1,9 @@
 -------------------------------------------------------------------------------
 Changes in version 0.98
 
+- Manually invoke qmail-inject and qmail-queue separately in order to
+  fully control the envelope and capture the qmail PID.
+
 - Add an optional separator before the copied message.
 
 - Add a newline after the response message and after the copied header,
